--- a/SnekGame/SnekGame.vcxproj
+++ b/SnekGame/SnekGame.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Snake.h" />
+    <ClInclude Include="SnekGame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
