--- a/SnekGame/SnekGame.vcxproj.filters
+++ b/SnekGame/SnekGame.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SnekGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
